# smsswebapp

./: .gitignore  CBT_COMPONENT_SUMMARY.md  DESIGN_SYSTEM_REFERENCE.md  Procfile  TEACHERS_PORTAL_DESIGN_SYSTEM.md  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js  vite.config.mjs
Accounts/: groups.py  models.py  schemas.py  urls.py  views.py
Accounts/templates/: complete_profile.html  forgot_password.html  login.html  reset_password.html  sign_up.html
Admission_form/: admin.py  apps.py  models.py  urls.py  views.py
Admission_form/migrations/: 0001_initial.py  0002_auto_20221221_0609.py  0003_admission_payment.py  0004_delete_admission_payment.py  0005_auto_20221229_0302.py  0006_auto_20230308_2347.py  0007_auto_20230309_0417.py  0008_auto_20230309_0418.py  0009_auto_20230309_1501.py
Admission_form/templates/: Admission_details.html  Admission_form.html  Initiate_payment2.html  (+1 more)
Attendance/: models.py  urls.py  views.py
Blog/: models.py  schemas.py
CBT/: admin.py  models.py  schemas.py  urls.py  views.py
Elibrary/: admin.py  apps.py  models.py  urls.py  views.py
Home/: admin.py  models.py  schemas.py  views.py
Payment_portal/: Paystack.py  admin.py  apps.py  models.py  urls.py  views.py
Result_portal/: admin.py  apps.py  models.py  schemas.py  urls.py  views.py
Teachers_Portal/: admin.py  apps.py  forms.py  models.py  schemas.py  urls.py  views.py
smsssite/: settings.py  storages.py  urls.py  wsgi.py
templates/: Teachers_navbar.html  base.html  main_footer.html  main_navbar.html
(+288 files in other folders)
